--- a/.gitignore
+++ b/.gitignore
@@ -242,6 +242,21 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+[Oo]ut/
+msbuild.log
+msbuild.err
+msbuild.wrn
 
 # Visual Studio LightSwitch build output
 **/*.HTMLClient/GeneratedArtifacts
